# MegVerse

./: README.md  package-lock.json  package.json  tailwind.config.cjs
src/: main.tsx
src-tauri/: Cargo.toml  MegVerse  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/modules/: scan.rs
src-tauri/src/scripts/: lightgbm.rs
src-tauri/src/utils/: dir.rs
src/functions/: scan.ts
