[package]
name = "megverse"
version = "0.0.0"
description = "AI Antivirus App"
authors = ["NavinKumarMNK"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.0", features = [] }

[dependencies]
serde_json = "1.0"
rayon = "1.6.1"
sha2 = "0.10.6"
md5 = "0.7.0"
num_cpus = "1.13.0"
io = "0.0.2"
hex = "0.4.3"
mpsc = "0.1.0"
watcher = "0.0.1"

serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.0", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
